--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,28 +1,28 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?kefarsfgg#1" target="_blank">首页</a> | <a href="https://d3bo5docy69ast.cloudfront.net/1?reqwrkh" target="_blank">动态网</a> | <a href="https://d8jw662akk94j.cloudfront.net/2?mfspcqbkh" target="_blank">大纪元</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/4?uzrdd" target="_blank">看中国</a> | <a href="https://d3bo5docy69ast.cloudfront.net/pHh5q?tajihoc" target="_blank">新生网</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/tktpt?wswcum" target="_blank">阿波罗网</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/Mjpvu?wtfvx" target="_blank">干净世界</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/10?phughkd" target="_blank">退党服务</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/Rffqf?aprtluop" target="_blank">明慧广播</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/nw9Vn?zwysqmakq" target="_blank">传奇时代</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/AF9AG?qcvdcambu" target="_blank">新境界影视</a> | <a href="https://d2zw89wk00y815.cloudfront.net/zqMQA?whjcev" target="_blank">文昭谈论</a> | <a href="https://doh73o6c3dnba.cloudfront.net/7?qximqkl" target="_blank">明慧</a></p><p><a href="https://dtjix0ckmebpi.cloudfront.net/9?mcmdvd" target="_blank">大法</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/3?hquqxdc" target="_blank">新唐人</a> | <a href="https://doh73o6c3dnba.cloudfront.net/obAhT?wnece" target="_blank">人民报</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/xXNHu?zwtglvg" target="_blank">放光明</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/5?eftenh" target="_blank">新纪元</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/6?ybgexl" target="_blank">希望之声</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/11?zgxydjitv" target="_blank">无界网络</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/Pueji?dbbfq" target="_blank">追查国际</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/16?fpoekvg" target="_blank">明慧之窗</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/LdvzZ?omsmzifu" target="_blank">细语人生</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/fBn3r?rbgbyqh" target="_blank">新世纪影视</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/PUWMb?epdqxmx" target="_blank">江峰时刻</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/8?zflshxly" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274330.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2016/03/1512261805062483-320x200.jpg"><p align="center">美四口之家挣多少够活 纽约加州并非最贵</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?pafjabw#1" target="_blank">首页</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/1?aomcbohs" target="_blank">动态网</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/2?osura" target="_blank">大纪元</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/4?wkifpkch" target="_blank">看中国</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/pHh5q?ewkzftkpr" target="_blank">新生网</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/tktpt?idmgqhzs" target="_blank">阿波罗网</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/Mjpvu?lywrwdfyh" target="_blank">干净世界</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/10?rugbqijmv" target="_blank">退党服务</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/Rffqf?saltbhzf" target="_blank">明慧广播</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/nw9Vn?nduhgffwx" target="_blank">传奇时代</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/AF9AG?fruakalu" target="_blank">新境界影视</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/zqMQA?vzylkadhh" target="_blank">文昭谈论</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/7?buijoq" target="_blank">明慧</a></p><p><a href="https://d1ntfewljph5k2.cloudfront.net/9?bialvm" target="_blank">大法</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/3?ptvrvuv" target="_blank">新唐人</a> | <a href="https://d265ujbtchne9r.cloudfront.net/obAhT?palxulsr" target="_blank">人民报</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/xXNHu?exepmscl" target="_blank">放光明</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/5?eitydhjnw" target="_blank">新纪元</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/6?ladgq" target="_blank">希望之声</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/11?muozm" target="_blank">无界网络</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/Pueji?jyigqeeuh" target="_blank">追查国际</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/16?lxlccrnh" target="_blank">明慧之窗</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/LdvzZ?nqkcsu" target="_blank">细语人生</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/fBn3r?tlygfow" target="_blank">新世纪影视</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/PUWMb?cuofpbj" target="_blank">江峰时刻</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/8?nbvccv" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273712.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274414-605b1ca22f6850192f5b5310-320x200.jpg"><p align="center">【菁英论坛】经济危机又来？巴菲特的警示</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273712.md#1" title="【菁英论坛】经济危机又来？巴菲特的警示""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274414-605b1ca22f6850192f5b5310-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274330.md#1" title="美四口之家挣多少够活 纽约加州并非最贵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2016/03/1512261805062483-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274333.md#1" title="2024美国大选首场总统辩论六大看点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14243428-article-image-victor-davis-hanson-3-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273504.md#1" title="军头赴延安开会 专家：凸显中共存亡时刻""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/03/id14197391-GettyImages-2051578461-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274227.md#1" title="四大洲夏至遇高温 或迎来全球最热夏天""><img width="73" src="https://i.epochtimes.com/assets/uploads/2017/08/shutterstock_691763356-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274128.md#1" title="追查国际更新中共活摘器官群体灭绝罪证据""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/11/id13343494-b312b7de456fbb1f90aad7e21d91ee11-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274227.md#1" title="四大洲夏至遇高温 或迎来全球最热夏天""><img width="73" src="https://i.epochtimes.com/assets/uploads/2017/08/shutterstock_691763356-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274035.md#1" title="数据显示中国经济持续下滑 总体消费萎缩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274036-GettyImages-2155633255-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274142.md#1" title="荷兰首相吕特将成为北约下一任领导人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274199-GettyImages-2157423794-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274077.md#1" title="安徽黄山洪水冲走房屋车辆 多人失联""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274093-53ff253f7b81fc4c77010a0776299cac-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272178.md#1" title="中共鼓动公民同意捐献器官 专家警告小心""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/05/id14001393-01-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273934.md#1" title="临近三中全会 上海访民遭严控 多人失联""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273935-Unknown-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273992.md#1" title="G7针对中共 分析：援俄的中国银行恐受制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273994-GettyImages-2112289685-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273578.md#1" title="菲律宾军方发布菲中军人海上冲突视频""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/03/id14195424-000_34KR9E7-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274421.md#1">【新闻五人行】铁三角散架？朝俄曝中共伪实力</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274415.md#1">【秦鹏观察】重磅调查：中共养大缅甸四大家族</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273712.md#1">【菁英论坛】经济危机又要来了？巴菲特的警示</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274386.md#1">加拿大著名影星唐纳德·萨瑟兰去世 享寿88岁</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274288.md#1">出人意料 通胀下不建议在Costco买的5类商品</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274336.md#1">双胞胎女儿幼儿园毕业 谢娜晒眼眶泛泪自拍照</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274435.md#1">加州高院支持州政府 阻纳税人保护法案公投</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274314.md#1">美国五城市住房最难以负担 四个在同一州</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274421.md#1">【新闻五人行】铁三角散架？朝俄曝中共伪实力</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274415.md#1">【秦鹏观察】重磅调查：中共养大缅甸四大家族</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273712.md#1">【菁英论坛】经济危机又来？巴菲特的警示</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274386.md#1">加拿大著名影星唐纳德·萨瑟兰去世 享寿88岁</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273536.md#1">人民币兑俄卢布跌至1年多来最低 释何信号</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273115.md#1">“拆墙运动”刘栋玲面临被遣返回中国危险</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273634.md#1">复旦大学学位授予仪式上 学生打老师泄不满</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273115.md#1">“拆墙运动”刘栋玲面临被遣返回中国危险</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273177.md#1">公安介入追税 中共设“警税作战中心”惹议</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273066.md#1">清华学生参加数学竞赛要报批 副院长回应</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273007.md#1">上海地铁一男子持刀行凶致3伤 现场画面曝光</a><br>
@@ -53,11 +53,11 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273834.md#1">大陆文章鼓励农民投资A股引网络炸锅 被下架</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274421.md#1">【新闻五人行】铁三角散架？朝俄曝中共伪实力</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274415.md#1">【秦鹏观察】重磅调查：中共养大缅甸四大家族</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273712.md#1">【菁英论坛】经济危机又要来了？巴菲特的警示</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274336.md#1">双胞胎女儿幼儿园毕业 谢娜晒眼眶泛泪自拍照</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274335.md#1">中国游客让孩子在济州岛街头大便 激怒韩国人</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274172.md#1">中共内部整肃不断 三中全会前官员持续落马</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274138.md#1">陕西省前卫健委主任被查 该省深涉活摘器官</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273578.md#1">菲律宾军方发布菲中军人海上冲突视频</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273916.md#1">28名中共文宣高官密集病亡 23人为党员</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273494.md#1">【菁英论坛】缺钱缺疯了 中共向民企开刀</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273708.md#1">【时事金扫描】乌军攻克里米亚？普京访朝异常</a><br>
@@ -99,13 +99,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271080.md#1">屡受骗“金融难民”纷纷三退唾弃中共</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271048.md#1">【新闻看点】劝捐器官不成 传武汉医院拔管致人死</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270948.md#1">【新闻五人行】G7批中俄 美欧对中共祭出大招</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2cqatq4sylstf.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2cqatq4sylstf.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,777</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1n74hn0pqq8ob.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1n74hn0pqq8ob.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,777</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,071,162 人
+!共 432,071,838 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274129.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274129.md#1">飞天艺术学院公告：澄清</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273758.md#1">国际调查：中国人权状况恶劣 香港持续恶化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273164.md#1">黄雪琴王建兵遭中共判刑 洛杉矶华人集会抗议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272644.md#1">中领馆官员遮挡成蕾入镜 澳总理对李强喊话</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271665.md#1">安徽老农写信给泽连斯基表支持 遭连夜讯问</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271059.md#1">儿子被判定脑死亡 母亲告武汉医院为器官害命</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274367.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13232507-shutterstock_1747049189-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274367.md#1">中国经济持续放缓 5月瑞士手表出口下降</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273791.md#1">纳斯达克加强审查中港企业IPO 防暴涨暴跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273691.md#1">比亚迪称被“恶意诋毁” 砸重金悬赏查证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273576.md#1">为何印度股市涨幅超纳指 中国股市萎靡不振</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273555.md#1">中国618电商节销售额首降 大学生：荷包已空</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273604.md#1">欧盟版权规定对Shein有何影响</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274397.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274405-13f10cdf383d5d302a460b3e113375f8-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274397.md#1">广西柳州两任市委书记同日被处理</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274315.md#1">时隔5年美B-2轰炸机抵关岛 在中共后院演习</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274316.md#1">美学者：夏天唤起人们对中共镇压的黑暗记忆</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274051.md#1">云南保山市长陈锐去世 上月底其父投案后被查</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273568.md#1">中共住建部前部长陈政高病亡 曾迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273405.md#1">朝俄加深关系 中共为何小心翼翼“旁观”</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274390.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273159-GettyImages-2157642916-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274390.md#1">广东梅州遭遇罕见暴雨洪灾 至少9人死6失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274356.md#1">山东女生被多人鞭抽围殴视频曝光 引舆论关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274048.md#1">青岛卓越世纪中心一女子跳楼 街道办通报引质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273247.md#1">广西洪水43.1万人受灾 桂林居民划船出行</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272902.md#1">科大讯飞38岁工程师猝死 引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272864.md#1">广东广西福建齐现山体滑坡 多人失联被埋</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273823.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273949-498591f6547e20ee776acb2454e5814f-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273823.md#1">开使馆车挡道惹议 亚太空合秘书长余琦拍片认错</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273821.md#1">成都住持与女主播开房遭勒索 案件现新进展</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273711.md#1">三退声明精选（2024/06/19）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273023.md#1">内蒙古一村5人遇害 山西刑案前村支书被通缉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272917.md#1">陆第一网红冯提莫癌症痊愈 自曝还有5种病</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272857.md#1">黄晓明为戏一度增肥15公斤 感叹体重难恢复</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268174-11_id13734986-000_9UB6PT-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259194.md#1">造假风气蔓延至香港 陆生以假文凭入读港大</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
